--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,6 +1,39 @@
 {
-  "current": "Default",
+  "current": {
+    "shop_name": "Sheriffderek store",
+    "shop_description": "A shore where @sheriffderek practices Shopify things.",
+    "black": "#000000",
+    "white": "#ffffff",
+    "gray": "#cdcdcd",
+    "gray_light": "#f3f3f3",
+    "gray_dark": "#606060",
+    "gray_lighter": "#fcfcfc",
+    "color": "#ff0066",
+    "color_light": "#ff5c9d",
+    "color_dark": "#93003b",
+    "highlight": "#00fcb7",
+    "highlight_light": "#a4ffe6",
+    "highlight_dark": "#00936b",
+    "alternate": "#28eeff",
+    "alternate_light": "#b2f9ff",
+    "alternate_dark": "#0197a4",
+    "checkout_header_image": "",
+    "checkout_logo_image": "",
+    "checkout_logo_position": "left",
+    "checkout_logo_size": "medium",
+    "checkout_body_background_image": "",
+    "checkout_body_background_color": "#fff",
+    "checkout_input_background_color_mode": "white",
+    "checkout_sidebar_background_image": "",
+    "checkout_sidebar_background_color": "#fafafa",
+    "checkout_heading_font": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
+    "checkout_body_font": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
+    "checkout_accent_color": "#197bbd",
+    "checkout_button_color": "#197bbd",
+    "checkout_error_color": "#e32c2b",
+    "content_for_index": []
+  },
   "presets": {
-    "Default": { }
+    "Default": {}
   }
 }
